Added paragraph to index.html page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>
       I decided to take webpage design to help understand some of the basics behing the internet we all use every day. Wanting to seak a career in sports managment, and ever changing and developing field, a basic knowledge of how websites and the internet, necesities of the job, work is important. I also wanted to learn how websites work and are ran just out of curiosity.
     </p>
+   <p>JeanClaude Lelievre, Sept 14, 2021, Assignment 3A</p>
   </body>
 </html>
